<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:contentPadding="12dp"
    app:strokeWidth="0dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="6dp"
    app:cardBackgroundColor="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvNoteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/tv_note_title_placeholder"
                android:textSize="18sp"
                android:textColor="@color/dark_green"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/tvNoteTitle"
                android:layout_alignBottom="@id/tvNoteTitle"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center">
                <ImageView
                    android:id="@+id/ivEditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit"
                    android:contentDescription="@string/edit_icon_button_content_desc"
                    app:tint="@color/dark_green" />
                <ImageView
                    android:id="@+id/ivDeleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/delete_icon_button_content_desc"
                    app:tint="@color/dark_green" />
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/tvNoteContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/tv_note_content_placeholder"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:maxLines="4"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>